--- a/week-8/index.html
+++ b/week-8/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="function.js"></script>
-    <!-- <script src="assignment.js"></script> -->
+    <script src="assignment.js"></script>
+    <script src="factorial.js"></script>
   </head>
   <body>
-    <h1>Javascript Assignment</h1>
+    <h1>Learning Javascript</h1>
   </body>
 </html>
