--- a/week-8/index.html
+++ b/week-8/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="function.js"></script>
+    <!-- <script src="function.js"></script> -->
     <script src="assignment.js"></script>
-    <script src="factorial.js"></script>
+    <script src="randomnum.js"></script>
+    <!-- <script src="factorial.js"></script> -->
   </head>
   <body>
     <h1>Learning Javascript</h1>
